;;;; -*- coding: utf-8; -*-
changes in sbcl-1.0.9 relative to sbcl-1.0.8:
  * minor incompatible change: SB-SYS:OUTPUT-RAW-BYTES is deprecated.
  * bug fix: new compiler transforms for MEMBER and ASSOC were affected
    by printer control variables. (reported by Dan Corkill)
  * bug fix: system leaked memory when delayed output was performed by
    the OS in smaller chunks then expected. (thanks to David Smith)
  * bug fix: system leaked memory when file streams were not closed 
    properly.
  * bug fix: large objects written to slow streams that were modified
    after the write could end up with the modified state written to
    the underlying file descriptor.

changes in sbcl-1.0.8 relative to sbcl-1.0.7:
  * enhancement: experimental macro SB-EXT:COMPARE-AND-SWAP provides
    atomic compare-and-swap operations on threaded platforms.
  * enhancement: experimental function SB-EXT:RESTRICT-COMPILER-POLICY
    allows assining a global minimum value to optimization qualities
    (overriding proclamations and declarations).
  * enhancement: closed over variables can be stack-allocated on x86
    and x86-64.
  * performance bug fix: GETHASH and (SETF GETHASH) are once again
    non-consing.
  * optimization: slot definition lookup is now O(1). This speeds up
    eg. SLOT-VALUE and (SETF SLOT-VALUE) with variable slot names.
  * optimization: STRING-TO-OCTETS is now up to 60% faster for UTF-8.
  * optimization: ASSOC and MEMBER can now be open-coded for all
    combinations of keyword arguments when second argument is constant
    and SPEED >= SPACE. In other cases a specialized version is
    selected.
  * bug fix: using obsoleted structure instances with TYPEP and
    generic functions now signals a sensible error.
  * bug fix: threads waiting on GET-FOREGROUND can be interrupted.
    (reported by Kristoffer Kvello)
  * bug fix: backtrace construction is now more careful when making
    lisp-objects from pointers on the stack, to avoid creating bogus